added claims route for obtaiing claim, added prod database, etc
